Kube-manifests/deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: wipro-app-deployment
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wipro 
  template:
    metadata:
      labels:
        app: wipro 
    spec:
      containers:
        - image: muralisocial123/transcation-bank-app:latest
          name: wipro-app 
          ports:
            - containerPort: 3000 
          resources:
            requests:
              cpu: 100m
              memory: 128Mi 
            limits:
              cpu: 200m
              memory: 256Mi
