Kube-manifests/dynamic-volume.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: my-pod 
spec: 
  containers:
    - name: nginx 
      image: nginx 
      volumeMounts:
        - name: my-ebs-volume 
          mountPath: /usr/share/nginx/html
  volumes: 
    - name: my-ebs-volume 
      persistentVolumeClaim:
        claimName: my-ebs-dynamic-pvc
