Kube-manifests/example-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: app-example
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: app-web
        image: muralisocial123/transcation-bank-app:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
