Kube-manifests/host-path-volume.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: nginx-deployment 
spec: 
  replicas: 2 
  selector: 
    matchLabels:
      app: nginx1
    template: 
      metadata: 
        labels:
          app:nginx1  
      spec: 
        containers: 
          - name: nginx 
            image: nginx:latest 
            volumeMounts:
              - name: host-path-volume
                mountPath: /usr/share/nginx/html
        volumes: 
          - name: host-path-volume 
            hostPath: 
              path: /mnt/data 
              type: DirectoryOrCreate
