Kube-manifests/nginx-pv-static-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-example
spec:
  containers:
  - name: container-example
    image: nginx:latest
    volumeMounts:
    - name: pv-example
      mountPath: /usr/share/nginx/html
  volumes:
  - name: pv-example
    persistentVolumeClaim:
      claimName: pvc-example
