Kube-manifests/pod-static-volume.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: example-pod 
spec:
  containers:
    - name: my-cont 
      image: nginx 
      volumeMounts:
        - name: my-ebs-volume 
          mountPath: /usr/share/nginx/html
  volumes:
    - name: my-ebs-volume 
      persistentVolumeClaim:
        claimName: my-ebs-pvc
