Kube-manifests/node-port-svc.yaml
apiVersion: v1 
kind: Service
metadata:
  name: trans-svc-nodeport
spec:
  selector:
    app: web
  ports:
  - port: 3001
    targetPort: 3000
    protocol: TCP 
  type: NodePort
