Kube-manifests/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: transcation-svc
spec:
  selector:
    app: wipro
  ports:
  - port: 3002
    targetPort: 3000
    protocol: TCP 
  type: ClusterIP
