Kube-manifests/wipro-deployment1.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: app-example-deployment1
spec:
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
      - name: app-example
        image: muralisocial123/oracle-web-app:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata:
  name: wipro-example-svc1
spec:
  selector:
    app: example
  ports:
  - protocol: TCP 
    port: 84
    targetPort: 80
  type: ClusterIP
