Kube-manifests/wipro-service1.yaml
apiVersion: v1 
kind: Service
metadata:
  name: wipro-example-svc1
spec:
  selector:
    app: example
  ports:
  - protocol: TCP 
    port: 84
    targetPort: 80
  type: ClusterIP
