Kube-manifests/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /bank(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: transcation-svc 
            port: 
              number: 3002
      - path: /oracle(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: wipro-example-svc1 
            port: 
              number: 84   
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: wipro-example-svc1 
            port: 
              number: 84
